--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-Dr. Eleanor Gaye
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marking up a letter</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
 Bobtown, CA 99999,
@@ -61,3 +71,5 @@ Yours sincerely,
 Dr Eleanor Gaye
 
 University of Awesome motto: "Be awesome to each other." -- The memoirs of Bill S Preston, Esq
+</body>
+</html>
